--- a/app/single-financials.html
+++ b/app/single-financials.html
@@ -82,7 +82,7 @@
 				можно потерять десятки тысяч долларов. Поэтому сегодня мы поделиться с вами своим опытом и расскажем, как мы рекомендую
 				распределять деньги, на чем можно сэкономить при запуске, а на чем экономить ни в коем случае нельзя.</p>
 
-				<p>Первый вопрос после того как вы выбрали продукт для продаж на Amazon — это «сколько единиц продукта нужно закупать первоначально?». Если мы говорим о стратегии Онлайн Арбитраж, то закупить можно любое количество товара, хоть 10 штук. По стратегии Private Label уже нужно считать. Когда вы делали product research (искали продукт) вы анализировали, сколько продаж делают ваши конкуренты и на основе анализа вы должны приблизительно понимать, на сколько продаж в день вы можете рассчитывать.</p>
+				<p>Первый вопрос после того как вы выбрали продукт для продаж на Amazon — это «сколько единиц продукта нужно закупать первоначально?». Если мы говорим о стратегии Онлайн Арбитраж, то закупить можно любое количество товара, хоть 100 штук. По стратегии Private Label уже нужно считать. Когда вы делали product research (искали продукт) вы анализировали, сколько продаж делают ваши конкуренты и на основе анализа вы должны приблизительно понимать, на сколько продаж в день вы можете рассчитывать.</p>
 
 				<p>Например, вы ориентируетесь на 8 продаж в день. Соответственно, считаем с запасом — 10 продаж в день. Далее вы должны посчитать, сколько по времени изготавливается ваш продукт - допустим вам обещают 2 недели, но т.к. при работе с Китаем не стоит серьезно относится к обещаниям по срокам — считаем 3 недели. И неделю на авиа доставку. Плюс время на обработку заказа самим Amazon - пара недель. Соответственно, срок от изготовления вашего продукт до того момента, пока он окажется на складе Amazon — 1,5 месяца.</p>
 
@@ -96,6 +96,24 @@
 				<p>«Стоит ли оставлять деньги про запас?». Всегда оставляйте немного денег про запас (в районе 10% от суммы запуска), на случай если возникнут непредвиденные расходы. Например, пока изготавливается товар может поменяться стоимость доставки из-за сезонности, и др. «На чём нельзя экономить?». На качестве изготавливаемых продуктов и на качестве фотографий. Например, недавно при запуске нового товара у нас произошел «косяк». Китаец-производитель 2 раза неправильно указывал адрес доставки брендированного образца товара в Россию, из-за этого мы потеряли 2 недели времени, и это при том что нас огромный опыт работы с Китаем более 7 лет. Представляю бы как в этой ситуации растерялся бы новичок.</p>
 
 				<p>Образец в России нужен для того, чтобы мы сделали фотографии товара для листинга у нашего проверенного фотографа из Москвы. В итоге товар был только в США и мы стали искать фотографа там. Нашли исполнителя с крутым портфолио: в итоге задержка срока и работа сделана некачественно - время потеряно. Нашли нового фотографа — в итоге фото будут готовы только на днях. Всегда старайтесь отправить образцы бронированного товара раньше, чем готова вся партия и указывайте пару адресов для доставки, чтобы не было таких задержек.</p>
+
+				<p>Также в бизнесе на Amazon, как и в любом другом бизнесе, нужно использовать силу сложного процента. Например, вы выбрали
+				товар и протестировали его. Получили 100% прибыли на продаже. И теперь вы начинаете полноценно работать с этим товаром.
+				Например, ваш бюджет на покупку товара 3000$. По срокам у вас уходит: 3 недели на изготовление, 3 недели на доставку, 3
+				недели на распродажу, 2 недели на вывод средств с Amazon. Цикл оборачиваемости средств уже около 2,5 месяцев. Грубо
+				говоря, за год вы можете закупить товар 5 раз (для удобства счета берем круглое число), если ваш бюджет всего 3 тысячи
+				долларов.</p>
+
+				<p><strong>1 вариант.</strong> Вы не используете сложный процент. Вы закупили товар на 3000 - вывели 6000, 3000 достали из оборота как свою
+				чистую прибыль, а на 3000 снова купили товар. Так вы сделали 5 раз, и к концу года ваши результаты следующие: ваш оборот
+				так и остался 3000 долларов. При этом за год вы заработали 15000 долларов чистыми. Это отличный результат на хорошем
+				товаре.</p>
+
+				<p><strong>2 вариант.</strong> Вы продаете точно такой же товар, только вы используете сложный процент. Купили на 3000 - вывели 6000
+				долларов. На 6000 долларов закупили - вывели 12000. Закупились на 12000 - продали на 24000 долларов. Закупились на 24000
+				- продали на 48000 долларов. Закупились на 48000 долларов - продали на 96000 долларов. Понятно, что модель
+				идеализирована и возможно для такого оборота вам понадобится еще 1 товар, но цифры всё наглядно показывают. Во втором
+				случае при точно таком же товаре за тот же период вы заработали в 5,3 раза больше! И этим нужно пользоваться.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
