--- a/app/single-find-supplier.html
+++ b/app/single-find-supplier.html
@@ -126,6 +126,12 @@
 				склад Amazon. Работа через брокера снижает риски к 0, но брокер так же должен быть проверенным, желательно по
 				рекомендации, т.к. они тоже часто оказываются не добросовестными.</p>
 
+				<div class="video">
+					<iframe width="853" height="480" src="https://www.youtube.com/embed/9fxEZ2uq59k" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+				</div>
+
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
 			</div>
