--- a/app/single-find.html
+++ b/app/single-find.html
@@ -185,6 +185,12 @@
 				просчитать когда нужно докупать товар и сколько денег понадобится для своевременной дозакупки товара, и т.д., так что
 				перед тем, как начать продавать на Amazon, нужно досконально изучить информацию по поводу выбора товара.</p>
 
+				<div class="video">
+					<iframe width="853" height="480" src="https://www.youtube.com/embed/BZ-AzNsLgqc" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+				</div>
+
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
 			</div>
