--- a/app/single-long.html
+++ b/app/single-long.html
@@ -76,18 +76,35 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Для тех, кто интересуется бизнесом на Amazon, максимально актуален вопрос о том, насколько это перспективное направление для запуска бизнеса, и как долго оно еще будет существовать. Сразу хочу сказать, что вы можете расслабиться: бизнес по продаже товаров на Amazon будет процветать еще долгие годы, и давайте я приведу вам несколько примеров (а главное фактов), почему это именно так!</p>
+				<p>Для тех, кто интересуется бизнесом на Amazon, максимально актуален вопрос о том, насколько это перспективное направление
+				для запуска бизнеса, и как долго оно еще будет существовать и развиваться. Сразу хотим сказать, что вы можете
+				расслабиться: бизнес по продаже товаров на Amazon будет процветать еще долгие годы, ведь Amazon растет на протяжении уже
+				более чем 10 лет, и каждый года Amazon бьет рекорды по продажам и по выручке. Ниже мы приведем вам несколько фактор,
+				почему Amazon будет актуален еще долгие годы.</p>
 
 				<ol>
 					<li>Начнем с того факта, что основатель Amazon, Джефф Безос, прямо сейчас является самым богатым человеком в мире (естественно, благодаря Amazon). Как вы думаете, насколько стабильный и перспективный бизнес у самого богатого человека в мире? Может ли он закрыться или загнуться в ближайшей перспективе и какова вероятность такого события? Думаю очевидно, что вероятность такого события минимальна. Приблизительно с такой же вероятностью люди перестанут покупать айфоны или пить кофе (или даже воду).</li>
-					<li>По последним данным, на Amazon продается 306 продуктов в СЕКУНДУ, и 26,5 миллионов продуктов в день. Я даже не знаю что должно произойти, чтобы «тема перестала быть актуальной», потому что с такими объемами продаж даже если ты делаешь практически всё неправильно, то ты всё равно сможешь делать несколько продаж в день. Кстати, в 2017 году Amazon вошел в список ТОП-10 мировых ритейлеров (ТОП-10 в мире по количеству проданных товаров!!!). Вы до сих пор не хотите «откусить кусок от этого пирога»?</li>
+					<li>По последним данным, на Amazon продается около 500 продуктов в СЕКУНДУ, и около 30 миллионов продуктов в день. Мы не
+					знаем, что должно произойти, чтобы «тема перестала быть актуальной», потому что с такими объемами продаж есть огромное
+					количество товаров, который можно продавать в количестве от 10 штук в день. Кстати, в 2017 году Amazon вошел в список
+					ТОП-10 мировых ритейлеров (ТОП-10 в мире по количеству проданных товаров!!!). Вы до сих пор не хотите «откусить кусок от
+					этого пирога»?</li>
 					<li>Amazon находится на 4 месте в мире по темпам роста, и на 1 месте в мире по ожидаемым темпам роста. Оставляем эту информацию без своих комментариев.</li>
 					<li>В 2017 году на Amazon пришлось более 50% всех онлайн покупок в США (2018-2019 годы - тоже более 50%). Этот процент ежегодно рос, и уже перевалил за 50%. Я думаю, ни для кого не будет секретом, что рынок онлайн покупок в США гораздо более развит, чем в России? Так вот, как может перестать актуальна самая крупная онлайн торговая площадка США? Такая же вероятность, что Гугл, Яндекс и Инстаграм тоже перестанут быть актуальными и все перестанут ими пользоваться. Более того, Amazon развивает новые рынки, и если даже в том же США какие-то ниши станут менее актуальными, то можно продавать товары, к примеру, в Европе.</li>
 				</ol>
 
-				<p>Зная эту информацию, вы можете быть на 100% уверенными в перспективе бизнеса на Amazon, и можете быть спокойны, когда вкладываете в Amazon свои деньги.</p>
+				<p>Зная эту информацию, вы можете быть на 100% уверенными в перспективе бизнеса на Amazon, и можете быть спокойны, когда
+				вкладываете в Amazon свои деньги. Ниже мы предоставим график выручки с продаж Amazon. Как вы можете увидеть, продажи в
+				каждом квартале растут ежегодно.</p>
 
-				<p>Единственный нюанс состоит в том, что из-за такого стремительного роста Amazon, естественно растет и конкуренция среди продавцов и она будет так же продолжать рост. Поэтому, чем раньше вы зайдете в этот бизнес, тем легче (и дешевле) вам будет раскрутиться и начать зарабатывать. Ну и, естественно, чем позже вы будете заходить на Amazon, тем больше информации вам придется усваивать, чтобы обойти конкурентов</p>
+				<img src="img/blog/single-long-img-1.jpg" class="img-responsive" alt="image">
+
+				<p>Единственный нюанс состоит в том, что из-за такого стремительного роста Amazon, естественно растет и конкуренция среди
+				продавцов и она будет так же продолжать рост. Поэтому, чем раньше вы зайдете в этот бизнес, тем легче (и дешевле) вам
+				будет раскрутиться и начать зарабатывать. Потому что с ростом конкуренции растет и порог входа в этот бизнес, т.к. из-за
+				конкуренции увеличивается бюджет, чтобы зайти в ту или иную нишу.Ну и, естественно, чем позже вы будете заходить на
+				Amazon, тем больше информации вам придется усваивать, чтобы обойти конкурентов, и тем больше вам придется прилагать
+				усилий.</p>
 
 				<p>Конечно, если вы хотели зайти в Amazon, и "по быстрому срубить бабла", то лучше поискать другую площадку для таких желаний. Amazon - это серьезный бизнес, к которому нужно подходить с ответственностью и быть настроенным на развитие внутри этого бизнеса.</p>
 
