--- a/app/single-lot-competition.html
+++ b/app/single-lot-competition.html
@@ -76,27 +76,78 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Приветствую! На связи Егор Романов, основатель Amazing Cash! Я часто слышу стереотип, что на Amazon очень большая конкуренция, и из-за этого там сложно заработать. Давайте разберемся, действительно ли это так?</p>
+				<p>Приветствую! На связи Егор Романов, основатель Amazing Cash! Я часто слышу стереотип, что на Amazon очень большая
+				конкуренция, и из-за этого там сложно заработать. Давайте разберемся, действительно ли это так?</p>
 
-				<p>На Amazon действительно торгуют продавцы со всего мира. и вам предстоит конкурировать с предпринимателями с разных точек планеты. Но есть очень важный нюанс. Абсолютное большинство продавцов, которые приходят на Амазон – это не профессиональные продавцы. Они приходят на Амазон, потому что просто услышали, что Амазон это самый крупный в мире маркетплейс, и они решили, что заработать там легко и просто. Абсолютное большинство продавцов именно из этой категории, они приходят на Амазон и не хотят развиваться, они просто думают, что это какая-то трендовая площадка с огромным количеством продаж на которой легко заработать, и этот подход абсолютно неверен. То есть даже если конкуренция в принципе большая, то конкурируете вы не со всеми, а только с теми продавцами, кто профессионально занимается Амазоном. Вы легко обойдете большинство продавцов, которые пришли на Амазон непонятно зачем, и конкурировать будете только с профессионалами. Далее, даже если в общем на всем Амазон в принципе большая конкуренция, даже если не брать в расчет то, что большинство конкурентов не профессионалы, то есть огромное количество ниш на Амазоне, в которых практически нет конкуренции. И вас реально никак не касается то, что на Амазон много продавцов и конкуренция большая, ведь всегда можно найти нишу, в которой конкуренции практически нет.</p>
+				<p>На Amazon действительно торгуют продавцы со всего мира, и вам предстоит конкурировать с предпринимателями с разных точек
+				планеты. Но есть очень важный нюанс. Абсолютное большинство продавцов, которые приходят на Amazon – это не
+				профессиональные продавцы. Они приходят на Amazon, потому что просто услышали, что Amazon — это самый крупный в мире
+				маркетплейс, и они решили, что заработать там легко и просто. Абсолютное большинство продавцов именно из этой категории,
+				они приходят на Amazon и не хотят развиваться, они просто думают, что это какая-то трендовая площадка с огромным
+				количеством продаж на которой легко заработать, и этот подход абсолютно неверен. То есть даже если конкуренция в
+				принципе большая, то конкурируете вы не со всеми, а только с теми продавцами, кто профессионально занимается бизнесом на
+				Amazon, а их не очень-то и много. Вы легко обойдете большинство продавцов, которые пришли на Amazon непонятно зачем, и
+				конкурировать будете только с профессионалами.</p>
 
-				<p>Ну и конечно же важно понимать, что на Амазон ежедневно делается около 30 миллионов продаж. По последним данным, эта цифра даже выше, но вы только вдумайтесь – 30 миллионов продаж в день. Это огромное количество денег. Многие при этом так говорят о конкуренции, как будто они хотят забрать себе все эти 30 миллионов продаж. На самом деле, если вы делаете, к примеру 10 продаж в день с чистой прибылью в 10 долларов, то в месяц вы уже будете зарабатывать 3000 долларов. Вам не нужно миллионы продаж, вам нужно грубо говоря всего 10 продаж в день, чтобы уже нормально зарабатывать. Ниш, где это можно сделать без особой конкуренции – огромное множество. Ну и конечно, здоровая конкуренция никогда никому не мешала, и конкуренция только подталкивает бизнес вперед.</p>
+				<p>Далее, даже если в общем на всем Амазон в принципе большая конкуренция, даже если не брать в расчет то, что большинство
+				конкурентов не профессионалы, то есть огромное количество ниш на Amazon, в которых практически нет конкуренции. И вас
+				реально никак не касается то, что на Amazon много продавцов и конкуренция большая, ведь всегда можно найти нишу, в
+				которой конкуренции практически нет. Например, если вы захотите открыть кофейню, то вы же не будете смотреть на то, сколько всего кофеен в России? Вас будет интересовать только то, сколько у вас конкурентов в
+				одной конкретно выбранной локации, а остальные кофейни России с вами никак конкурировать не будут и поэтому они вас
+				никак не касаются. Точно также и с бизнесом на Amazon. Конкуренция большая, но есть огромное количество ниш и огромное
+				количество вариантов различных товаров, в которых конкуренция минимальная и абсолютно комфортная.</p>
 
-				<p>Конечно, не имеет смысл лезть в супер конкурентные ниши, но вы всегда сможете подобрать нишу, куда можно зайти с вашим бюджетом. Дело исключительно в выборе ниши и выборе товара для продажи, именно на этом этапе вы уже отсеиваете своих конкурентов. Да и сейчас, если посмотреть объективно, в мире нет ни одного бизнеса без конкуренции, если бизнес без конкуренции, то это никому ненужный бизнес, в котором нет денег. В сферах, где есть деньги, конкуренция будет всегда, и чем больше денег в сфере, тем больше будет конкуренция. Бегать от конкуренции просто глупо, нужно стараться стать чуточку лучше конкурентов, и тогда у вас не будет проблем.</p>
+				<p>Ну и конечно же важно понимать, что на Amazon ежедневно делается около 30 миллионов продаж. По последним данным, эта
+				цифра даже выше, но вы только вдумайтесь – 30 миллионов продаж в день. Это огромное количество денег. Многие при этом
+				так говорят о конкуренции, как будто они хотят забрать себе все эти 30 миллионов продаж. На самом деле, если вы делаете,
+				к примеру 10 продаж в день с чистой прибылью в 10 долларов, то в месяц вы уже будете зарабатывать 3000 долларов. Вам не
+				нужно миллионы продаж, вам нужно грубо говоря всего 10 продаж в день, чтобы уже нормально зарабатывать. Ниш, где это
+				можно сделать без особой конкуренции – огромное множество. Ну и конечно, здоровая конкуренция никогда никому не мешала,
+				ведь конкуренция только подталкивает бизнес вперед.</p>
 
-				<p>Ну и завершая тему конкуренции, хочу привести пример, который мне очень нравится. Например, у вас есть задача поймать 10 рыб. Где вы будете их ловить, в реке, где за день всего проплывает всего 10 рыб, которые даже вряд ли заметят вашу наживку, но зато вы будете на этой реке один, без других рыбаков, или вы всё таки пойдете на ту реку, через которую ежедневно пропыывают 30 миллионов рыб, но рыбаков с вами будет много? Хоть я и не рыбак, но думаю очевидно, что во втором случае поймать 10 рыб гораздо легче.</p>
+				<p>Конечно, не имеет смысл лезть в супер-конкурентные ниши, но вы всегда сможете подобрать нишу, куда можно зайти с вашим
+				бюджетом. Дело исключительно в выборе ниши и выборе товара для продажи, именно на этом этапе вы уже отсеиваете своих
+				конкурентов. Да и сейчас, если посмотреть объективно, в мире нет ни одного бизнеса без конкуренции, если бизнес без
+				конкуренции, то это никому ненужный бизнес, в котором нет денег. В сферах, где есть деньги, конкуренция будет всегда, и чем больше денег в сфере, тем больше будет конкуренция. Бегать от конкуренции просто глупо,
+				нужно стараться стать чуточку лучше конкурентов, и тогда у вас не будет проблем.</p>
 
-				<p>Почему вообще люди бояться конкуренции? Единственный вариант, почему можно бояться конкуренции – это нежелание развиваться. Хочется ничего не делать и по-быстрому "срубить бабла". Такие люди обычно всю жизнь ищут «ту самую нишу» на которой можно легко и быстро заработать, и как правило ничего не находят.</p>
+				<p>Ну и завершая тему конкуренции, хочу привести пример, который мне очень нравится. Например, у вас есть задача поймать 10
+				рыб. Где вы будете их ловить, в реке, где за день всего проплывает всего 10 рыб, которые даже вряд ли заметят вашу
+				наживку, но зато вы будете на этой реке один, без других рыбаков, или вы всё таки пойдете на ту реку, через которую
+				ежедневно пропыывают 30 миллионов рыб, но рыбаков с вами будет много? Хоть я и не рыбак, но думаю очевидно, что во
+				втором случае поймать 10 рыб гораздо легче.</p>
 
-				<p>Действительно ли на Amazon такая уж сильная конкуренция?! В некоторых нишах конкуренция действительно сильная и в них практически нереально зайти. Но если копнуть чуть глубже и поискать, то можно найти десятки тысяч разных ниш с большим спросом, в которые можно зайти с самой минимальной конкуренцией. Всё точно так же, как и в любом традиционном бизнесе, есть ниши, в которых огромная конкуренция, есть ниши, где пока что конкуренции практически нет.</p>
+				<p>Почему вообще люди бояться конкуренции? Единственный вариант, почему можно бояться конкуренции – это нежелание
+				развиваться. Хочется ничего не делать и по-быстрому "срубить бабла". Такие люди обычно всю жизнь ищут «ту самую нишу» на
+				которой можно легко и быстро заработать, и как правило ничего не находят и всю жизнь просто ждут.</p>
 
-				<p>Но главное то совсем не конкуренция, а то количество потенциальных клиентов, которое есть на Amazon. Вот именно по этому показателю у Amazon точно нет конкурентов и ориентироваться нужно именно на этом.</p>
+				<p><strong>Действительно ли на Amazon такая уж сильная конкуренция?!</strong> В некоторых нишах конкуренция действительно огромная и в них
+				практически нереально зайти. Но если копнуть чуть глубже и поискать, то можно найти десятки тысяч разных ниш с большим
+				спросом, в которые можно зайти с самой минимальной конкуренцией. Всё точно так же, как и в любом традиционном бизнесе,
+				есть ниши, в которых огромная конкуренция, есть ниши, где пока что конкуренции практически нет. Всё зависит лишь от
+				подхода. <strong>Но главное-то совсем не конкуренция, а то количество потенциальных клиентов, которое есть на Amazon.</strong> Вот именно по этому показателю у Amazon точно нет конкурентов и концентрироваться нужно именно на этом, что здесь и с конкуренцией можно сделать большое
+				количество продаж.</p>
 
-				<p>А знаете, что говорит о конкуренции основатель Amazon Джефф Безос и самый богатый человек в мире?!</p>
+				<p>Кстати, знаете, что говорит о конкуренции основатель Amazon Джефф Безос и самый богатый человек в мире?! «Принимая утром
+				душ, наши конкуренты думают о том, как обойти того или иного соперника. Мы же в душе думаем об инновациях, которые
+				сделают жизнь клиента лучше». (с) Джефф Безос</p>
 
-				<p>«Принимая утром душ, наши конкуренты думают о том, как обойти того или иного соперника. Мы же в душе думаем об инновациях, которые сделают жизнь клиента лучше». (с) Джефф Безос</p>
+				<p>Он говорит о том, что не стоит обращать внимание на конкурентов. Нужно просто делать качественный продукт и
+				удовлетворять потребности клиентов, тогда с вашим бизнесом будет всё хорошо, вне зависимости от наличия конкурентов. Ну
+				а делать условные 10 продаж в день с прибылью в 10 долларов на Amazon можно в огромном количестве ниш.</p>
 
-				<p>Он говорит о том, что не стоит обращать внимание на конкурентов. Нужно просто делать качественный продукт и удовлетворять потребности клиентов, тогда с вашим бизнесом будет всё хорошо, вне зависимости от наличия конкурентов.</p>
+				<p><strong>Ниже вы можете посмотреть некоторые результаты наших клиентов, которые не побоялись мифической конкуренции, и запустили
+				свой бизнес на Amazon.</strong> На скриншотах месячные обороты с продаж на Amazon некоторых наших клиентов. Чистая прибыль в
+				среднем около 30% от оборота.</p>
+
+				<div class="images">
+					<img class="img-responsive" src="img/blog/single-lot-competition-img-4.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-lot-competition-img-3.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-lot-competition-img-6.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-lot-competition-img-2.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-lot-competition-img-1.jpg" alt="images">
+					<img class="img-responsive" src="img/blog/single-lot-competition-img-5.jpg" alt="images">
+				</div>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
