--- a/app/single-strategy.html
+++ b/app/single-strategy.html
@@ -132,6 +132,15 @@
 					<li>Вы можете зарегистрировать бренд и запатентовать свой товар, вы можете запустить несколько товаров под одним брендом, вы можете зарегистрировать этот бизнес на компанию из США и продать его через несколько лет.</li>
 				</ul>
 
+				<p><strong>Ниже вы можете увидеть видео-отзыв нашего клиента Антона, которому мы запустили магазин на Amazon “под ключ”
+						по стратегии Private Label (тариф Бренд). Клиент управляет магазином самостоятельно.</strong></p>
+				
+				<div class="video">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/zRA-OI4nvgU" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+				</div>
+
 				<p><strong>Какая стратегия лучше?!</strong></p>
 
 				<p>Если мы рассматриваем стратегии Онлайн Арбитраж и Private Label, то тут нельзя сказать, что какая-то стратегия лучше или хуже. У каждой из этих свои плюсы. Доходность по обоим стратегиям примерно одинаковая. Выбор стратегии зависит лишь от того, какие у вас вложения и какие у вас цели от бизнеса на Amazon</p>
@@ -139,12 +148,6 @@
 				<p><strong>С какой стратегии мы рекомендуем начать?</strong></p>
 
 				<p>Выбор стратегии зависит лишь от ваших целей, которые вы преследуете от бизнеса на Amazon, и от ваших первоначальных вложений. Если ваши вложения от 6-7 до 20 тысяч долларов, то это однозначно стратегия Онлайн Арбитраж (тариф Стандарт). Если ваши вложения больше 20 тысяч долларов, то можно рассмотреть и Private Label и Онлайн Арбитраж. Если ваша цель — это просто заработок на Amazon на перепродаже товаров, то вам полностью подойдет Онлайн Арбитраж. Если ваша цель — это построение компании и построение бренда в США, то это Private Label. Так же выбор зависит от того, готовы ли вы с головой погрузиться в Amazon (Private Label), или вы рассматриваете Amazon просто как один из нескольких источников заработка, с помощью которого вы будете просто зарабатывать (Онлайн Арбитраж).</p>
-
-				<p><strong>Ниже вы можете увидеть видео-отзыв нашего клиента Антона, которому мы запустили магазин на Amazon “под ключ” по стратегии Private Label (тариф Бренд). Клиент управляет магазином самостоятельно.</strong></p>
-
-				<div class="video">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/zRA-OI4nvgU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
