--- a/app/single-when-start.html
+++ b/app/single-when-start.html
@@ -94,6 +94,13 @@
 
 				<p>Кстати, знаете главное отличие успешных людей от неудачников? Обычно это говорят миллионеры и миллиардеры. Самый важный показатель успеха — это скорость от момента возникновения идеи до её реализации. Одни действуют сразу же, а другие месяцами думают и ждут идеальный момент, но в итоге никогда его не находят.</p>
 
+				<p>Например, в конце мае 2020 года (сразу после того, как начался карантин из-за коронавируса) мы запустили товар для
+				нашего клиента. На начало июня достигли результата около 100 продаж за день. Если честно, мы сами не ожидали такого
+				феноменального результата, но этот факт показывает то, что начинать продажи на Amazon можно абсолютно в любое время
+				года.</p>
+
+				<img src="img/blog/single-when-start-img-2.jpg" alt="image" class="img-responsive">
+
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
 			</div>
