--- a/app/single-reviews.html
+++ b/app/single-reviews.html
@@ -78,83 +78,66 @@
 
 				<p>Для того, чтобы вам было удобнее ознакомиться с отзывами об Amazing Cash, мы решили собрать несколько отзывов в одно место. Во всех отзывах Егор Романов попросил наших клиентов рассказать, какие у них сейчас результаты на Amazon, с какими они трудностями сталкивались и как они оценивают перспективы бизнеса на Amazon. К каждому отзыву прилагаем ссылку на социальные сети наших клиентов, давших согласие на размещение отзыва.</p>
 
-				<h3>1. Антон Шуклин</h3>
 
+				<h3>1. Отзыв об Amazing Cash от Антона Шуклина</h3>
 				<div class="video">
 					<iframe src="https://www.youtube.com/embed/HttYB08TZ7M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
-
-				<p>Антон проходил наше обучение по запуску бизнеса на Amazon и запустил товар на Amazon по стратегии Private Label.</p>
-
+				<p>Антон проходил наше обучение по запуску бизнеса на Amazon и запустил товар на Amazon по стратегии Private Label. В данном видео Антон дает свой отзыв об Amazing Cash.</p>
 				<p>Ссылка на Антона: <a target="_blank" rel="nofollow" href="https://vk.com/id17365230">vk.com/id17365230</a></p>
 
-				<h3>2. Максим Б.</h3>
 
-				<img src="img/reviev-1.jpg" alt="image" class="img-responsive">
-
-				<p>Максим проходил наше обучение по запуску бизнеса на Amazon и запустил товары на Amazon по стратегии Онлайн Арбитраж</p>
-
-				<p>Ссылка на Максима: <strong>ссылка была скрыта по причине того, что данный клиент стал оказывать конкурирующие нам услуги</strong>.</p>
-
-				<p><strong>1) Расскажи, когда ты начал обучение у нас и почему решил выбрать бизнес на Amazon? </strong></p>
-
-				<p>Случайно увидел ваш блог, подписался, начал следить, и как-то решился попробовать. Был конец 2018 года. Очень вдохновился идеей заработка в долларах, как раз было предновогоднее время и курс валют, как происходит в это время каждый год, рос. Поэтому решил, что нужно обязательно попробовать. Тем более Amazon такой бизнес, которым можно заниматься параллельно работе, и не такие уж большие вложения, по сравнению с большинством бизнесов.</p>
-
-				<p><strong>2) По какой стратегии ты запускался и что было самое сложное в запуске?</strong></p>
-
-				<p>Я выбрал стратегию Онлайн Арбитраж, т.к. на неё не нужно много денег, да и она попроще. Не сказать, что было очень сложно, но изучить пришлось достаточно. Самое сложное для меня было разобраться в выборе товара. Ну и регистрация естественно. У меня она заняла около 2 месяцев. Я общался с другими людьми, кто торгует на Amazon, и у кого-то регистрация так же пару месяцев занимала, а у кого-то она проходила за пару дней. Но регистрация скорее не сложно, а просто долго и напрягает, что не понимаешь, когда тебе одобрят аккаунт.</p>
-
-				<p><strong>3) Какие у тебя результаты сейчас и какие ближайшие планы на Amazon?</strong></p>
-
-				<p>Сейчас у меня продается несколько товаров по стратегии Онлайн Арбитраж. В среднем "в обойме" 4-6 товаров единовременно. Чистой прибыли они приносят в среднем 1500-2000$ в месяц. Сейчас откладываю часть денег с заработанного, и к следующему году планирую запускать товар по стратегии Private Label.</p>
-
-				<p><strong>4) Сколько ты изначально вложил в Amazon?</strong></p>
-
-				<p>Изначально свободных денег было не так много, в районе 500$ я планировал вложить в товар. Получилось так, что я закупился на эти 500$, продал первую партию товара, получил плюс, так сказать проверил бизнес-модель, и решил взять кредит 150 000 рублей, на которые уже запустил несколько товаров. Кредит отдал буквально за 3 месяца.</p>
-
-				<p><strong>5) Как тебе наше обучение и поддержка? Хватило ли тебе информации?</strong></p>
-
-				<p>В целом всё хорошо, если чего-то не хватало, то я просил это объяснить и получал ответ. Пару раз вы даже добавляли видео-уроки по моим просьбам. В целом я более чем доволен.</p>
-
-				<p>Ссылка на Максима: <strong>ссылка была скрыта по причине того, что данный клиент стал оказывать конкурирующие нам услуги</strong>.</p>
-
-				<h3>3. Алексей Х.</h3>
-
-				<div class="video">
-					<iframe src="https://www.youtube.com/embed/4R5jp0-Sh50" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-
-				<p>Наша команда запустила Алексею магазин на Amazon “под ключ” по стратегии Private Label.</p>
-
-				<p>Алексей начал работу с нашей командой в мае 2019 года, на октябрь 2019 года его чистая прибыль составляет около 1300$ в месяц (на момент записи отзыва за 20 дней октября Алексей заработал 900$ чистой прибыли). Управлением магазином занимается наша команда, Алексей только наблюдает за работой со стороны.</p>
-
-				<h3>4. Роман Леонтьев</h3>
-
-				<div class="video">
-					<iframe src="https://www.youtube.com/embed/xmB6UzcRMZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-
-				<p>Роман прошел наше обучение по заработку на Amazon стратегия Онлайн Арбитраж и заработал +60% прибыли к первоначальным вложениям за 1 месяц!</p>
-
-				<p>Ссылка на Романа: <a target="_blank" rel="nofollow" href="https://vk.com/id_rmk56">vk.com/id_rmk56</a></p>
-
-				<h3>5. Антон Новиков</h3>
-
-				<div class="video">
-					<iframe src="https://www.youtube.com/embed/zRA-OI4nvgU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-
-				<h3>6. Елена Тим</h3>
-
-				<div class="video">
-					<iframe src="https://www.youtube.com/embed/CxKPNwrFcWo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</div>
-
-				<h3>7. Михаил Завалко</h3>
-
+				<h3>2. Отзыв об Amazing Cash от Михаила Завалко</h3>
 				<div class="video">
 					<iframe src="//vk.com/video_ext.php?oid=-107753250&id=456239093&hash=ba2e8a14ada64fa6&hd=2" width="853" height="480" frameborder="0" allowfullscreen></iframe>
 				</div>
+				<p>Михаил заказывал запуск магазина на Amazon "под ключ" в компании Amazing Cash по стратегии Онлайн Арбитраж. В данном видео Михаил дает свой отзыв об Amazing Cash.</p>
+				<p>Ссылка на Михаила: <a target="_blank" rel="nofollow" href="https://vk.com/zavalko_mishanya">https://vk.com/zavalko_mishanya</a></p>
+
+
+				<h3>3. Отзыв об Amazing Cash от Владислава Никульшина</h3>
+				<div class="video">
+					<iframe src="https://www.youtube.com/embed/GcedNHbS7EE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<p>Владислав заказывал запуск магазина на Amazon "под ключ" в компании Amazing Cash по стратегии Онлайн Арбитраж. В данном видео Владислав дает свой отзыв об Amazing Cash. </p>
+
+
+				<h3>4. Отзыв об Amazing Cash от Романа Леонтьева</h3>
+				<div class="video">
+					<iframe src="https://www.youtube.com/embed/xmB6UzcRMZ4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<p>Роман прошел наше обучение по Amazon по стратегии Онлайн Арбитраж и заработал +60% прибыли к первоначальным вложениям за 1 месяц! В данном видео Роман дает свой отзыв об Amazing Cash.</p>
+
+
+				<h3>5. Отзыв об Amazing Cash от Антона Новикова</h3>
+				<div class="video">
+					<iframe src="https://www.youtube.com/embed/zRA-OI4nvgU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<p>Антон заказывал запуск магазина на Amazon "под ключ" в компании Amazing Cash по стратегии Private Label. В данном видео Антон дает свой отзыв об Amazing Cash.</p>
+
+
+				<h3>6. Отзыв об Amazing Cash от Елены Тим</h3>
+				<div class="video">
+					<iframe src="https://www.youtube.com/embed/CxKPNwrFcWo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
+				<p>Елена заказывала запуск магазина на Amazon "под ключ" в компании Amazing Cash по стратегии Private Label. В данном видео Елена дает свой отзыв об Amazing Cash.</p>
+
+
+				<h3>7. Отзыв об Amazing Cash от Максима Б.</h3>
+				<img src="img/reviev-1.jpg" alt="image" class="img-responsive">
+				<p>Максим проходил наше обучение по запуску бизнеса на Amazon и запустил товары на Amazon по стратегии Онлайн Арбитраж. Ниже Максим дает текстовый отзыв об Amazing Cash. </p>
+				<p>Ссылка на Максима: <strong>ссылка была скрыта по причине того, что данный клиент стал оказывать конкурирующие нам услуги</strong>.</p>
+				<p><strong>1) Расскажи, когда ты начал обучение у нас и почему решил выбрать бизнес на Amazon?</strong></p>
+				<p>Случайно увидел ваш блог, подписался, начал следить, и как-то решился попробовать. Был конец 2018 года. Очень вдохновился идеей заработка в долларах, как раз было предновогоднее время и курс валют, как происходит в это время каждый год, рос. Поэтому решил, что нужно обязательно попробовать. Тем более Amazon такой бизнес, которым можно заниматься параллельно работе, и не такие уж большие вложения, по сравнению с большинством бизнесов.</p>
+				<p><strong>2) По какой стратегии ты запускался и что было самое сложное в запуске?</strong></p>
+				<p>Я выбрал стратегию Онлайн Арбитраж, т.к. на неё не нужно много денег, да и она попроще. Не сказать, что было очень сложно, но изучить пришлось достаточно. Самое сложное для меня было разобраться в выборе товара. Ну и регистрация естественно. У меня она заняла около 2 месяцев. Я общался с другими людьми, кто торгует на Amazon, и у кого-то регистрация так же пару месяцев занимала, а у кого-то она проходила за пару дней. Но регистрация скорее не сложно, а просто долго и напрягает, что не понимаешь, когда тебе одобрят аккаунт.</p>
+				<p><strong>3) Какие у тебя результаты сейчас и какие ближайшие планы на Amazon?</strong></p>
+				<p>Сейчас у меня продается несколько товаров по стратегии Онлайн Арбитраж. В среднем "в обойме" 4-6 товаров единовременно. Чистой прибыли они приносят в среднем 1500-2000$ в месяц. Сейчас откладываю часть денег с заработанного, и к следующему году планирую запускать товар по стратегии Private Label.</p>
+				<p><strong>4) Сколько ты изначально вложил в Amazon?</strong></p>
+				<p>Изначально свободных денег было не так много, в районе 500$ я планировал вложить в товар. Получилось так, что я закупился на эти 500$, продал первую партию товара, получил плюс, так сказать проверил бизнес-модель, и решил взять кредит 150 000 рублей, на которые уже запустил несколько товаров. Кредит отдал буквально за 3 месяца.</p>
+				<p><strong>5) Как тебе наше обучение и поддержка? Хватило ли тебе информации?</strong></p>
+				<p>В целом всё хорошо, если чего-то не хватало, то я просил это объяснить и получал ответ. Пару раз вы даже добавляли видео-уроки по моим просьбам. В целом я более чем доволен.</p>
+				<p>Ссылка на Максима: <strong>ссылка была скрыта по причине того, что данный клиент стал оказывать конкурирующие нам услуги</strong>.</p>
 
 
 
