--- a/app/index-blog.html
+++ b/app/index-blog.html
@@ -361,6 +361,13 @@
 					<p class="watch-button">Читать статью</p>
 				</a>
 
+				<a href="/blog/single-crimea-business.html" class="type-item">
+					<p>Можно ли запустить бизнес на Amazon, если вы живёте в Крыму?</p>
+					<img src="img/blog/single-crimea-business.jpg" alt="image" class="img-responsive">
+					<p class="excerpt">У жителей Крыма существует проблема, что многие американские и международные компании не дают крымчанам пользоваться своими услугами.</p>
+					<p class="watch-button">Читать статью</p>
+				</a>
+
 				<a href="/blog/single-time.html" class="type-item">
 					<p>Сколько времени нужно уделять бизнесу на Amazon?!</p>
 					<img src="img/time-img.jpg" alt="image" class="img-responsive">
