--- a/app/index-blog.html
+++ b/app/index-blog.html
@@ -130,6 +130,13 @@
 					<p class="watch-button">Читать статью</p>
 				</a>
 
+				<a href="/blog/single-one-million-dollars-on-amazon.html" class="type-item">
+					<p>1 000 000 долларов на Amazon</p>
+					<img src="img/one-million-dollars-on-amazon-img.jpg" alt="image" class="img-responsive">
+					<p class="excerpt">Реально ли заработать 1 000 000 долларов за месяц на Amazon? Для этого нужно запустить много товаров в продажу или может хватить и одного товара?</p>
+					<p class="watch-button">Читать статью</p>
+				</a>
+
 				<a href="/blog/single-choice.html" class="type-item">
 					<p>Ваш выбор: в течении ближайших лет стать нищим или позаботиться о доходе в стабильной валюте?!</p>
 					<img src="img/choice-img.jpg" alt="image" class="img-responsive">
