add new photo index page

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
 
-	<link rel="stylesheet" href="css/main.min.css?v=1.22">
+	<link rel="stylesheet" href="css/main.min.css?v=1.23">
 
 </head>
 
@@ -394,7 +394,10 @@
 				<p>Там же мы собрали команду специалистов по ppc-рекламе (реклама на Amazon), сделать это было трудно, т.к. таких людей в России просто нет, а от рекламы напрямую зависит результат на Amazon. Мы сами потратили на свое обучение этой сфере суммы в несколько миллионов рублей на различные тренинги, чтобы во всем разобраться, и нам пришлось обучать наших сотрудников с нуля, тестировать их работоспособность на своих продуктах, и вкладывать немалые деньги в их обучение. Так же у нас в команде свой копирайтер (написание продающих текстов), переводчик, фотограф, проект-менеджер (координация работы всех специалистов). На постоянной основе работают люди, занимающиеся поиском продуктов. Так же есть подрядчики на аутсорсе: специалисты по отзывам на Amazon, дизайнеры, и другие. С января 2020 года мы оборудовали офис для удобной работы специалистов в России.</p>
 
 				<div class="map">
-					<img src="img/no-map.jpg" alt="map" class="img-responsive">
+					<div class="images">
+						<div class="img-office" style="background: url('img/no-map.jpg'); background-position: 0 0;"></div>
+						<div class="img-office" style="background: url('img/no-map-2.jpg'); background-position: center;"></div>
+					</div>
 				</div>
 
 				<h2>Зачем мы запускаем магазины «под ключ» и обучаем других людей?!</h2>
